<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Color Detector</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_login">Login</string>
    <string name="menu_mycolors">My colors</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="project_github">Contribute</string>
    <string name="save">Save</string>
    <string name="saved_successfully">Saved!</string>
    <string name="not_saved">Couldn\'t saved :(</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="login_failed">"Login failed"</string>
    <string name="not_logged_in_yet">Not logged in yet</string>
    <string name="need_login_for_mycolors">You need to login to see your colors</string>
    <string name="title_activity_my_colors">MyColors</string>
    <string name="no_colors_saved">You haven\'t saved any color yet</string>
    <string name="copied">Copied!</string>
    <string name="project_about">About</string>
    <string name="about_catch_button">Catches the color of where red pointer points. You don\'t need to login to detect color, but you will need to login to save that color.</string>
    <string name="about_mycolors_menu">List your saved colors\n\nYou can copy the hex code of the color swiping to left on a color\n\nYou can remove the color swiping to right on a color</string>
    <string name="about_login">You can login with your existing email address or username and password. \n\n When you entered a username or email adress which is not existing you will be registered and logged in automatically</string>
    <string name="color_deleted">Color deleted!</string>
    <string name="about_open_source">This application is an open-source project. You can contribute on a github</string>
    <string name="email_required">Please, enter an email or username</string>
    <string name="password_required">Please, enter a password</string>
</resources>
